--- a/index.html
+++ b/index.html
@@ -43,36 +43,38 @@
     <!-- belajar container, row, cold-md-6, w-100 -->
     <div class="container" style="border: 1px solid red">
       <!--container-fluid width=100%-->
-      <div class="row justify-content-center">
-        <div class="col-md-2">
+      <div class="row">
+        <!--bisa ditambah justify-content-center agar center-->
+        <div class="col-md-6 py-1">
+          <!-- padding or margin = p/y + t,b,s(start),e(end),x(kanan,kiri),y(atas,bawah) -->
           <img
             src="https://img.freepik.com/photos-premium/homme-femme-se-tiennent-plage-sous-ciel-eclaire-par-lune_860805-2759.jpg"
             class="img-fluid w-100"
             alt="Gambar 1"
           />
         </div>
-        <div class="col-md-2">
+        <div class="col-md-6 py-1">
           <img
             src="https://img.freepik.com/photos-premium/homme-femme-se-tiennent-plage-sous-ciel-eclaire-par-lune_860805-2759.jpg"
             class="img-fluid w-100"
             alt="Gambar 2"
           />
         </div>
-        <div class="col-md-2">
+        <div class="col-md-6 py-1">
           <img
             src="https://img.freepik.com/photos-premium/homme-femme-se-tiennent-plage-sous-ciel-eclaire-par-lune_860805-2759.jpg"
             class="img-fluid w-100"
             alt="Gambar 2"
           />
         </div>
-        <div class="col-md-2">
+        <div class="col-md-6 py-1">
           <img
             src="https://img.freepik.com/photos-premium/homme-femme-se-tiennent-plage-sous-ciel-eclaire-par-lune_860805-2759.jpg"
             class="img-fluid w-100"
             alt="Gambar 1"
           />
         </div>
-        <div class="col-md-2">
+        <div class="col-md-6 py-1">
           <img
             src="https://img.freepik.com/photos-premium/homme-femme-se-tiennent-plage-sous-ciel-eclaire-par-lune_860805-2759.jpg"
             class="img-fluid w-100"
