--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
     <!-- belajar container, row, cold-md-6, w-100 -->
     <div class="container" style="border: 1px solid red">
       <!--container-fluid width=100%-->
-      <div class="row">
+      <div class="row row-cols-auto">
         <!--bisa ditambah justify-content-center agar center-->
-        <div class="col-md-6 py-1">
+        <div class="col py-1">
           <!-- padding or margin = p/y + t,b,s(start),e(end),x(kanan,kiri),y(atas,bawah) -->
           <img
             src="https://img.freepik.com/photos-premium/homme-femme-se-tiennent-plage-sous-ciel-eclaire-par-lune_860805-2759.jpg"
@@ -53,28 +53,28 @@
             alt="Gambar 1"
           />
         </div>
-        <div class="col-md-6 py-1">
+        <div class="col py-1">
           <img
             src="https://img.freepik.com/photos-premium/homme-femme-se-tiennent-plage-sous-ciel-eclaire-par-lune_860805-2759.jpg"
             class="img-fluid w-100"
             alt="Gambar 2"
           />
         </div>
-        <div class="col-md-6 py-1">
+        <div class="col py-1">
           <img
             src="https://img.freepik.com/photos-premium/homme-femme-se-tiennent-plage-sous-ciel-eclaire-par-lune_860805-2759.jpg"
             class="img-fluid w-100"
             alt="Gambar 2"
           />
         </div>
-        <div class="col-md-6 py-1">
+        <div class="col py-1">
           <img
             src="https://img.freepik.com/photos-premium/homme-femme-se-tiennent-plage-sous-ciel-eclaire-par-lune_860805-2759.jpg"
             class="img-fluid w-100"
             alt="Gambar 1"
           />
         </div>
-        <div class="col-md-6 py-1">
+        <div class="col py-1">
           <img
             src="https://img.freepik.com/photos-premium/homme-femme-se-tiennent-plage-sous-ciel-eclaire-par-lune_860805-2759.jpg"
             class="img-fluid w-100"
@@ -84,6 +84,39 @@
       </div>
     </div>
     <!-- ============= -->
+
+    <div class="container mt-5 border border-primary">
+      <div class="row row-cols-2">
+        <div class="col py-3">
+          <img
+            src="https://img.freepik.com/photos-premium/homme-femme-se-tiennent-plage-sous-ciel-eclaire-par-lune_860805-2759.jpg"
+            class="img-fluid w-100"
+            alt="Gambar 2"
+          />
+        </div>
+        <div class="col py-3">
+            <img
+              src="https://img.freepik.com/photos-premium/homme-femme-se-tiennent-plage-sous-ciel-eclaire-par-lune_860805-2759.jpg"
+              class="img-fluid w-100"
+              alt="Gambar 2"
+            />
+          </div>
+          <div class="col py-3">
+            <img
+              src="https://img.freepik.com/photos-premium/homme-femme-se-tiennent-plage-sous-ciel-eclaire-par-lune_860805-2759.jpg"
+              class="img-fluid w-100"
+              alt="Gambar 2"
+            />
+          </div>
+          <div class="col py-3">
+            <img
+              src="https://img.freepik.com/photos-premium/homme-femme-se-tiennent-plage-sous-ciel-eclaire-par-lune_860805-2759.jpg"
+              class="img-fluid w-100"
+              alt="Gambar 2"
+            />
+          </div>
+      </div>
+    </div>
 
     <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
   </body>
